--- a/geppetto/Views/Storyboards/ActivityOverview.storyboard
+++ b/geppetto/Views/Storyboards/ActivityOverview.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2p-EQ-uKY" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="549.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="565.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="47u-7P-1ot">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
@@ -99,7 +99,7 @@
                                         <constraints>
                                             <constraint firstItem="47u-7P-1ot" firstAttribute="top" secondItem="v2p-EQ-uKY" secondAttribute="top" id="0Ag-Ea-MHg"/>
                                             <constraint firstItem="bfj-2L-7Rz" firstAttribute="leading" secondItem="v2p-EQ-uKY" secondAttribute="leading" constant="16" id="0Lu-p5-hnY"/>
-                                            <constraint firstAttribute="bottom" secondItem="SfA-eM-F41" secondAttribute="bottom" id="12V-OO-cJe"/>
+                                            <constraint firstAttribute="bottom" secondItem="SfA-eM-F41" secondAttribute="bottom" constant="16" id="12V-OO-cJe"/>
                                             <constraint firstItem="l45-P5-0L3" firstAttribute="centerX" secondItem="v2p-EQ-uKY" secondAttribute="centerX" id="4Zg-EL-VMj"/>
                                             <constraint firstItem="SfA-eM-F41" firstAttribute="leading" secondItem="v2p-EQ-uKY" secondAttribute="leading" constant="16" id="5dI-L1-3Mm"/>
                                             <constraint firstItem="Bcs-Ht-KoQ" firstAttribute="centerX" secondItem="v2p-EQ-uKY" secondAttribute="centerX" id="608-gk-yNs"/>
